--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html {
     box-sizing: border-box;
 }
 body {
-    background-color: mistyrose;
+    background-color: lemonchiffon;
     height: 100%;
     display: flex;
     justify-content: center;
